--- a/web/src/index.html
+++ b/web/src/index.html
@@ -12,7 +12,7 @@
 
 <h1> Current whitelist </h1>
 
-{{range .}}
+{{range .Whitelist}}
             {{ . }}<br>
 {{end}}
 
@@ -22,6 +22,24 @@
 </form>
 <br>
 <form action="/delete" method="GET">
+    <input name="host" type="text" />
+    <input type="submit" value="delete">
+</form>
+
+
+
+<h1> Current Blacklist </h1>
+
+{{range .Blacklist}}
+            {{ . }}<br>
+{{end}}
+
+<form action="/addBlacklist" method="GET">
+    <input name="host" type="text" />
+    <input type="submit" value="Add">
+</form>
+<br>
+<form action="/deleteBlacklist" method="GET">
     <input name="host" type="text" />
     <input type="submit" value="delete">
 </form>
