--- a/src/web/src/index.html
+++ b/src/web/src/index.html
@@ -44,5 +44,8 @@
     <input type="submit" value="delete">
 </form>
 
+<form action="/check" method="GET">
+    <input type="submit" value="Check">
+</form>
 
 {{end}}
